build issues and remove unnecessary STSTokenRequest