@@ -23,6 +23,7 @@ import static org.apache.hadoop.ozone.security.acl.OzoneObj.ResourceType.VOLUME;
 
 import java.io.IOException;
 import java.net.InetAddress;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.hadoop.ozone.om.exceptions.OMException;
 import org.apache.hadoop.ozone.security.STSTokenIdentifier;
 import org.apache.hadoop.ozone.security.acl.IAccessAuthorizer;
@@ -195,6 +196,6 @@ public final class OzoneAclUtils {
       return null;
     }
     final String policy = identifier.getSessionPolicy();
-    return policy != null && !policy.isBlank() ? policy : null;
+    return !StringUtils.isBlank(policy) ? policy : null;
   }
 }
